--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,15 @@ code {
 
 .slick-dots li button {
   pointer-events: none !important;
+  transform: scale(3) !important;
+  background-color: rgb(211, 211, 211) !important;
+}
+
+.slick-dots li.slick-active button {
+  background-color: #d87f3f !important;
+}
+
+.slick-dots {
+  display: flex;
+  justify-content: space-between !important;
 }
